--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Vue-Plugin to show a modal with progressbar",
   "main": "./dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "node afterinstall.js"
   },
   "repository": {
     "type": "git",
